# covins

./: .gitignore  dependencies.rosinstall  fix_eigen_deps.sh  install_file.sh  readme.md  release_notes.txt
.aux/: thirdparty_code.md
.github/workflows/: workflow.docker.buildx.gha.yaml
covins_backend/: CMakeLists.txt  Doxyfile.in  package.xml
covins_backend/config/: config_backend.yaml  config_backend_VR.yaml  covins.rviz
covins_backend/covins_sys/src/: covins_backend_node.cpp
covins_backend/include/covins/brisk/: hamming-inl.h  hamming.h  macros.h  neon-helpers.h
covins_backend/include/covins/covins_backend/: RelNonCentralPosSolver.hpp  RelPosSolver.hpp  Se3Solver.h  backend.hpp  communicator_be.hpp  feature_matcher_be.hpp  handler_be.hpp  keyframe_be.hpp  kf_database.hpp  landmark_be.hpp  map_be.hpp  optimization_be.hpp  placerec_be.hpp  placerec_gen_be.hpp  visualization_be.hpp
covins_backend/include/covins/covins_base/: config_backend.hpp  keyframe_base.hpp  kf_database_base.hpp  landmark_base.hpp  map_base.hpp  optimization_base.hpp  placerec_base.hpp  visualization_base.hpp  vocabulary.h
covins_backend/include/covins/dense_matcher/: DenseMatcher.hpp  ThreadPool.hpp
covins_backend/include/covins/dense_matcher/implementation/: DenseMatcher.hpp
covins_backend/include/covins/matcher/: ImageMatchingAlgorithm.h  LandmarkMatchingAlgorithm.h  MatchingAlgorithm.h
covins_backend/include/covins/matcher/opengv/absolute_pose/: FrameNoncentralAbsoluteAdapter.h
covins_backend/include/covins/matcher/opengv/rel_pose/: FrameNoncentralRelativeAdapter.hpp  frame-relative-adapter.hpp
covins_backend/include/covins/matcher/opengv/sac_problems/: FrameAbsolutePoseSacProblem.h  frame-relative-pose-sac-problem.hpp
covins_backend/launch/: tf.launch
covins_backend/output/: results_tf.csv  stamped_traj_estimate.txt
covins_backend/output/eval/: eval_os.ods
covins_backend/src/covins_backend/: RelNonCentralPosSolver.cpp  RelPosSolver.cpp  Se3Solver.cpp  backend.cpp  communicator_be.cpp  feature_matcher_be.cpp  handler_be.cpp  keyframe_be.cpp  kf_database.cpp  landmark_be.cpp  map_be.cpp  optimization_be.cpp  placerec_be.cpp  placerec_be_orig.cpp  placerec_gen_be.cpp  visualization_be.cpp
covins_backend/src/covins_base/: config_backend.cpp  keyframe_base.cpp  landmark_base.cpp  map_base.cpp  visualization_base.cpp
covins_backend/src/dense_matcher/: DenseMatcher.cpp  ThreadPool.cpp
covins_backend/src/matcher/: ImageMatchingAlgorithm.cpp  LandmarkMatchingAlgorithm.cpp  MatchingAlgorithm.cpp
covins_backend/src/matcher/opengv/: FrameNoncentralRelativeAdapter.cpp  frame-relative-adapter.cpp
covins_backend/srv/: ServiceGBA.srv  ServiceLoadMap.srv  ServicePruneMap.srv
covins_comm/: CMakeLists.txt  package.xml
covins_comm/config/: config_comm.yaml
covins_comm/include/covins/covins_base/: communicator_base.hpp  config_comm.hpp  timer_utils.hpp  typedefs_base.hpp  utils_base.hpp
covins_comm/include/covins/covins_base/msgs/: msg_keyframe.hpp  msg_landmark.hpp
covins_comm/src/covins_base/: communicator_base.cpp  config_comm.cpp  utils_base.cpp
covins_comm/src/covins_base/msgs/: msg_keyframe.cpp  msg_landmark.cpp
covins_frontend/: CMakeLists.txt  package.xml
covins_frontend/config/: EuRoC (copy).yaml  EuRoC.yaml  EuRoC_openvins.yaml  buzz.yaml  d455.yaml  kimera_stereoi.yaml  t265.yaml  zed2.yaml
covins_frontend/launch/: first_agent.launch  first_agent_realsense.launch  openvins_euroc_agent.launch  second_agent.launch  svo_agent_1.launch  svo_euroc_agent.launch  svo_kimera_agent.launch  t265_agent (copy).launch  t265_agent.launch  third_agent.launch  vins_d455_agent.launch  vins_docker_euroc_agent.launch  vins_euroc_agent.launch  vins_euroc_agent2.launch  zed_agent.launch
covins_frontend/src/: ORBextractor.cc  ORBextractor.cpp  ORBextractor.h  communicator.cpp  communicator.hpp  frontend_node.cpp  frontend_wrapper.cpp  frontend_wrapper.hpp
docker/: Dockerfile  Dockerfile.dockerignore  Makefile  README.md  run.sh  setup.sh
docs/: readme_COVINS_v1.0.md  run_COVINS-G.md  run_COVINS.md
orb_slam3/: CMakeLists.txt
orb_slam3/Examples/: MH_example.yaml  kimera_example.yaml  vicon_example.yaml
orb_slam3/Examples/LEE_H/: EuRoC.yaml  realsense_2_infra2.yaml  vins_fusion_realsense_2.yaml
orb_slam3/Examples/Monocular-Inertial/: mono_inertial_euroc.cc
orb_slam3/Examples/Monocular-Inertial/EuRoC_TimeStamps/: MH01_skipinit.txt  MH02_skipinit.txt  MH03_skipinit.txt  MH04_skipinit.txt  MH05_skipinit.txt
orb_slam3/Examples/ROS/ORB_SLAM3/: CMakeLists.txt  package.xml
orb_slam3/Examples/ROS/ORB_SLAM3/launch/: kimera_bag.launch  launch_docker_ros_euroc.launch  launch_ros_euroc.launch  launch_ros_euroc2.launch  launch_ros_euroc_fifth_agent.launch  launch_ros_euroc_fourth_agent.launch  launch_ros_euroc_second_agent.launch  launch_ros_euroc_third_agent.launch  launch_ros_kimera.launch  launch_ros_lee.launch
orb_slam3/Examples/ROS/ORB_SLAM3/src/: ros_mono_inertial.cc
orb_slam3/covins_examples/: euroc_examples_VR123.sh  euroc_examples_mh1.sh  euroc_examples_mh12345_vigba.sh  euroc_examples_mh123_vigba.sh  euroc_examples_mh2.sh  euroc_examples_mh3.sh  euroc_examples_mh4.sh  euroc_examples_mh45_vigba.sh  euroc_examples_mh5.sh
orb_slam3/include/: ImuTypes.h  KeyFrame.h  LocalMapping.h  MapPoint.h  ORBextractor.h  Optimizer.h  System.h
orb_slam3/include/comm/: communicator.hpp
orb_slam3/src/: Frame.cc  ImuTypes.cc  KeyFrame.cc  LocalMapping.cc  Map.cc  MapPoint.cc  ORBextractor.cc  Optimizer.cc  System.cc  Tracking.cc
orb_slam3/src/CameraModels/: KannalaBrandt8.cpp
orb_slam3/src/comm/: communicator.cpp
