<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>covins_backend</name>
  <version>1.0.0</version>
  <description>covins</description>

  <maintainer email="collaborative.slam@gmail.com"> </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>covins_comm</depend>
  <depend>roscpp</depend>
  <depend>opencv3_catkin</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>ceres_catkin</depend>
  <depend>robopt_open</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_cameras</depend>
  <depend>opengv</depend>
  <depend>doxygen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
