<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>covins_comm</name>
  <version>1.0.0</version>
  <description>covins</description>

  <maintainer email="collaborative.slam@gmail.com"> </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>cmake_modules</depend>
  <depend>opencv3_catkin</depend>
  <depend>glog_catkin</depend>

  <export></export>
</package>
